# concurrent_computing

./: .gitignore  .travis.yml  README.md
actor_model/: .gitignore  Readme.md
actor_model/example/: Makefile  main.cpp  run_parallel.sh  run_sequential.sh
actor_model/src/: actor_subdomain.cpp  actor_subdomain.h  domain.cpp  domain.h  mpi_channel.cpp  mpi_channel.h  mpi_machine.cpp  mpi_machine.h  object_broker.cpp  object_broker.h  partitioned_domain.cpp  partitioned_domain.h  shadow_actor_actions.h  shadow_subdomain.cpp  shadow_subdomain.h
async_writer/: .gitignore  Readme.md
async_writer/example/: Makefile  main.cpp  run_test.sh
async_writer/src/: async_writer.cpp  async_writer.h  compute.cpp  compute.h
cpp/BusyWaitLock/: CMakeLists.txt  Makefile  Readme.md  TTasSpinLock.hpp
cpp/DelayedScheduler/: CMakeLists.txt  Cron.hpp  InterruptableSleep.hpp  Makefile  Readme.md  Scheduler.hpp  ThreadPool.h
cpp/MPMCQueue/: CMakeLists.txt  MPMCQueue.hpp  MPMCQueue_demo.cpp  MPMCQueue_test.cpp  Makefile  Readme.md
cpp/ReaderWriterLock/: CMakeLists.txt  Makefile  Readme.md  readerWriterLock.cpp
cpp/Singleton/: CMakeLists.txt  Makefile  Readme.md  Singleton_test.cpp
cpp/SingletonLog/: .gitignore  CMakeLists.txt  Log.hpp  LogLevels.hpp  Log_demo.cpp  Log_test.cpp  Makefile  Readme.html  Readme.md
thread_safe_data_structure/: README.md
thread_safe_data_structure/cpp/BusyWaitLock/: License.txt  TasSpinLock.hpp  example.cpp
thread_safe_data_structure/cpp/DelayedScheduler/: CMakeLists.txt  License.txt  Scheduler.hpp  Scheduler_demo.cpp
thread_safe_data_structure/cpp/MPMCQueue/: License.txt  MPMCQueue.hpp
thread_safe_data_structure/cpp/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton_test.cpp
thread_safe_data_structure/cpp/SingletonLog/: CMakeLists.txt  Log_demo.cpp  Readme.md
